--- a/example.html
+++ b/example.html
@@ -18,7 +18,7 @@
 
     <script>
         // CHANGE THIS VALUE HERE
-        const apiKey = 'YOUR_API_KEY';
+        const apiKey = 'NDVOOHVYbWFGOFU3MjlTaFlmTE8wbm9QZEdBMw';
 
         document.getElementById('get-response').addEventListener('click', () => {
             const userQuestion = document.getElementById('user-input').value;
